[package]
name = "shard_lib"
version = "0.1.0"
edition = "2021"
authors = ["CLP Finance Team"]
description = "A comprehensive permission control system for Internet Computer applications"
license = "MIT"
repository = "https://github.com/clp-finance/clp"
documentation = "https://docs.rs/shard_lib"
readme = "README.md"
keywords = ["dfinity", "internet-computer", "ic", "permissions", "rbac"]
categories = ["authentication", "web-programming"]

[dependencies]
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17"
ic-cdk-timers = "0.11.0"
ic-ledger-types="0.14.0"
include-base64 = "0.1"
percent-encoding = "2.1"
ic-certified-map = "0.4"
sha2 = "0.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.93"
base64 = "0.22.0"
candid = "0.10"
num-bigint = "0.4"
num-traits = "0.2.14"
ic-stable-structures = "0.6.5"
regex = "1"
ciborium = "0.2.1"
ic-xrc-types = "1.2.0"