[package]
name = "vault"
version = "0.1.0"
edition = "2018"

[dependencies]
ic-cdk = "0.16"
ic-cdk-macros = "0.16"
ic-cdk-timers = "0.10.0"
ic-ledger-types="0.13.0"
include-base64 = "0.1"
percent-encoding = "2.1"
ic-certified-map = "0.3"
sha2 = "0.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.93"
base64 = "0.13.0"
candid = "0.10"
num-bigint = "0.4"
num-traits = "0.2.14"
ic-stable-structures = "0.6.5"
regex = "1"
ciborium = "0.2.1"
ic-xrc-types = "1.2.0"
shard_lib = { path = "../shard_lib" }

[lib]
crate-type = ["cdylib"]